# ivantiexplorer

./: pyproject.toml  readme.md
ivantiexplorer/: test_gui.py
